--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <br>
     <pre>
 
-      <p>this page is still in development. Last updated: 28/2/2023</p>
+      <p>this page is still in development. Last updated: 23/4/2023</p>
 
       <div class="vid" style="display:inline-block;">
         <h1>Featued YouTube Video:</h1>
@@ -21,8 +21,7 @@
       </div>
       <div style="display: inline-block; text-align: center;">
         <h1>Latest Tweet:</h1>
-        <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">It costed too much for twitter to do this? Anyway this will move most people away from SMS 2fa which is less secure than other 2fa methods <a href="https://t.co/AGSndnlg6n">https://t.co/AGSndnlg6n</a></p>&mdash; Revnoplex (@Revnoplex) <a href="https://twitter.com/Revnoplex/status/1627114600998248448?ref_src=twsrc%5Etfw">February 19, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-      </div>
+        <blockquote class="twitter-tweet" data-dnt="true" data-theme="dark"><p lang="en" dir="ltr">Mr Beast thumbnails be like: <a href="https://t.co/u8PxiEJdZt">https://t.co/u8PxiEJdZt</a></p>&mdash; Revnoplex (@Revnoplex) <a href="https://twitter.com/Revnoplex/status/1637264568752947200?ref_src=twsrc%5Etfw">March 19, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>      </div>
       <script src="/scripts/footer.js"></script>
     </pre>
   </body>
