--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <iframe width="852" height="480" src="https://www.youtube.com/embed/OSnveMc77ss" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div style="display: inline-block; text-align: center;">
-        <h1>Latest Tweet:</h1>
+        <h1>Featured Tweet:</h1>
         <blockquote class="twitter-tweet" data-dnt="true" data-theme="dark"><p lang="en" dir="ltr">Mr Beast thumbnails be like: <a href="https://t.co/u8PxiEJdZt">https://t.co/u8PxiEJdZt</a></p>&mdash; Revnoplex (@Revnoplex) <a href="https://twitter.com/Revnoplex/status/1637264568752947200?ref_src=twsrc%5Etfw">March 19, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>      </div>
       <script src="/scripts/footer.js"></script>
     </pre>
