Added Update message

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <br>
     <pre>
 
+      <h4>This site is getting an overhaul soon...<h4>
+
       <p>this page is still in development. Last updated: 23/4/2023</p>
 
       <div class="vid" style="display:inline-block;">
