Update Main Page

--- a/index.html
+++ b/index.html
@@ -13,19 +13,20 @@
     <br>
     <pre>
 
-      <h4>This site is getting an overhaul soon...<h4>
+      <h1>Hey, I'm Revnoplex</h1>
+      <p>I write code and make youtube videos as a hobby</p>
 
-      <p>this page is still in development. Last updated: 23/4/2023</p>
-
-      <div class="vid" style="display:inline-block;">
+    </pre>
+    <div class="featured-items", style="text-align: center;">
+      <div class="featured-item">
         <h1>Featued YouTube Video:</h1>
         <iframe width="852" height="480" src="https://www.youtube.com/embed/OSnveMc77ss" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
-      <div style="display: inline-block; text-align: center;">
+      <div class="featured-item">
         <h1>Featured Tweet:</h1>
         <blockquote class="twitter-tweet" data-dnt="true" data-theme="dark"><p lang="en" dir="ltr">Mr Beast thumbnails be like: <a href="https://t.co/u8PxiEJdZt">https://t.co/u8PxiEJdZt</a></p>&mdash; Revnoplex (@Revnoplex) <a href="https://twitter.com/Revnoplex/status/1637264568752947200?ref_src=twsrc%5Etfw">March 19, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>      </div>
+    </div>
       <script src="/scripts/footer.js"></script>
-    </pre>
   </body>
 
 </html>
