Update Bot Adding page

--- a/bot/index.html
+++ b/bot/index.html
@@ -11,20 +11,42 @@
     <script src="/scripts/title.js"></script>
     <noscript>Javascript must be enabled to properly display this page</noscript>
     <br>
-    <pre>
+    <br>
+    <br>
+    <div class="add-bot-style">
 
     <h1 style="text-align: center;">Add Revnobot</h1>
+    <br>
+    <h2 style="text-align: center;">Data Collection Policy:</h2>
+    <p>Revnobot will collect and store certain types of data for developer/debugging and for detecting potential misuse. The types of data collected can be listed below</p>
+    <ul>
+      <li>Server Names and IDs</li>
+      <li>Server Owner Usernames and IDs</li>
+      <li>Invite Access to servers if granted invite permission</li>
+      <li><b>Messages: </b> Revnobot will only collect messages related to command execution. What is collected:
+      <ul>
+        <li>Messages that start with the bot's prefix</li>
+        <li>Messages that the bot sent.
+        <li>Slash, user and message commands executed to the bot.</li>
+        <li>The name of the command used and the arguments passed to the bot</li>
+        <li>DMs sent to the bot</li>
+      </ul>
+    </ul>
 
-    <h2>Terms of Use:</h2>
-    <p>1. Do not abuse or spam the bot, there is a cooldown to prevent that from happening but this is in place just in case the cooldown doesnt work.</p><p>2. Do not try to exploit the bot. if you find a problem with the bot, please tell me immidiately (dm me on social media).</p><h4>Actions:</h4><p>If the bot is being exploited or spammed. The offending server can be blocklisted.</p>
+    <h2 style="text-align: center;">Terms of Use:</h2>
+    <ol>
+      <li>Do not abuse or spam the bot, there is a cooldown to prevent that from happening but this is in place just in case the cooldown doesnt work.</li>
+      <li>Do not try to exploit the bot. if you find a problem with the bot, please tell me immidiately (dm me on social media).</li>
+    </ol>
+    <h4>Actions:</h4>
+    <p>If the bot is being exploited or spammed. The offending server can be blocklisted.</p>
+    <div class="centralise">
     <input type="checkbox" id="terms" name="terms" value="accept"><label for="terms"> I accept the terms of use</label><br>
     <div id="addBot">
         <p id="addBotLink" class="disabledBtn">Add Bot</p>
     </div>
     <script src="/bot/checker.js"></script>
-
-
+    </div>
     
     <script src="/scripts/footer.js"></script>
-    </pre>
   </body>
