--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       </div>
       <div class="featured-item">
         <h1>Featured Tweet:</h1>
-        <blockquote class="twitter-tweet" data-dnt="true" data-theme="dark"><p lang="en" dir="ltr">Mr Beast thumbnails be like: <a href="https://t.co/u8PxiEJdZt">https://t.co/u8PxiEJdZt</a></p>&mdash; Revnoplex (@Revnoplex) <a href="https://twitter.com/Revnoplex/status/1637264568752947200?ref_src=twsrc%5Etfw">March 19, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>      </div>
+        <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">I&#39;m going to stick to this platform for now. I wan&#39;t to see threads or another alternative actually become a preferred platform by many and then I might consider moving. And maybe wait for the outcome of the elon vs zuck match</p>&mdash; Revnoplex (@Revnoplex) <a href="https://twitter.com/Revnoplex/status/1677123062662303745?ref_src=twsrc%5Etfw">July 7, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </div>
     </div>
       <script src="/scripts/footer.js"></script>
   </body>
