--- a/redirects/revnobot/index.html
+++ b/redirects/revnobot/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='https://discord.com/api/oauth2/authorize?client_id=711582152940060859&permissions=1644938394879&redirect_uri=https%3A%2F%2Frevnoplex.github.io%2Fadded-bot&response_type=code&scope=bot%20applications.commands%20guilds'" />
+    <meta http-equiv="refresh" content="0; url='https://discord.com/api/oauth2/authorize?client_id=711582152940060859&permissions=67613522128119&redirect_uri=https%3A%2F%2Frevnoplex.github.io%2Fadded-bot&response_type=code&scope=bot%20applications.commands%20identify'" />
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="icon" href="/media/images/default-black.png" />
     <title>Redirecting....</title>
