- Changed the /bot path to /revnobot and /bot is now a redirect to it - Moved terms of use and data collection policy to separate pages - Added new discord logo to "Discord Bot" button - Made <noscript> text easier to see - Made rickroll work with js disabled using <noscript>

--- a/404.html
+++ b/404.html
@@ -10,9 +10,9 @@
 
   <body>
     <script src="/scripts/title.js"></script>
-    <noscript>Javascript must be enabled to properly display this page</noscript>
     <br>
     <pre>
+    <noscript><h3 style="text-align: center">Javascript must be enabled to properly display this page</h3></noscript>
 
     <h1 style="text-align: center;">404! file/page not found</h1>
     <br>
