--- a/added-bot/index.html
+++ b/added-bot/index.html
@@ -7,15 +7,15 @@
 </head>
 <body>
     <script src="/scripts/title.js"></script>
-    <noscript>Javascript must be enabled to properly display this page</noscript>
     <br>
     <pre>
+        <noscript><h3 style="text-align: center">Javascript must be enabled to properly display this page</h3></noscript>
     
     <h1 style="text-align: center;">Thanks for adding Revnobot</h1>
 
     <h3 style="text-align: center; color: #ffffff;">You can close this tab now. <br>Or browse the rest of the website</h3>
 
-    <a href="/" class="btn">        Home         </a> <a href="/redirects/revnobot" class="btn">Add to another server</a>
+    <a href="/" class="btn">Home</a>  <a href="/redirects/revnobot" class="btn">Add to another server</a>
      
     <script src="/scripts/footer.js"></script>
     </pre>
