--- a/downloads/index.html
+++ b/downloads/index.html
@@ -11,6 +11,7 @@
     <script src="/scripts/title.js"></script>
     <br>
     <pre>
+    <noscript><h3 style="text-align: center">Javascript must be enabled to properly display this page</h3></noscript>
 
     <h1 style="text-align: center;">Download Center</h1>
 
