--- a/fun/index.html
+++ b/fun/index.html
@@ -9,9 +9,9 @@
 
   <body>
     <script src="/scripts/title.js"></script>
-    <noscript>Javascript must be enabled to properly display this page</noscript>
     <br>
     <pre>
+    <noscript><h3 style="text-align: center">Javascript must be enabled to properly display this page</h3></noscript>
     <h1 id="sus">Don't Click on Sussy Links</h1>
     <script>
       let mute = "";
@@ -27,6 +27,12 @@
         location.replace("/media/videos/")
       });
     </script>
+    <noscript>
+      <video playsinline autoplay loop width="auto" height="480">
+        <source src="/media/videos/rickroll.mp4" type="video/mp4">
+        Your browser does not support rickrolls. Update ur browser smh.
+      </video>
+    </noscript>
     <p>You might have been lucky and only got rickrolled this time, but you might not be so the next time.<br>Don't click on links that look too good to be true</p>
     <script src="/scripts/footer.js"></script>
     </pre>
