--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
   <body>
     <script src="/scripts/title.js"></script>
-    <noscript>Javascript must be enabled to properly display this page</noscript>
     <br>
     <pre>
+    <noscript><h3 style="text-align: center">Javascript must be enabled to properly display this page</h3></noscript>
 
       <h1>Hey, I'm Revnoplex</h1>
       <p>I write code and make youtube videos as a hobby</p>
