--- a/revnobot/choose-bot/index.html
+++ b/revnobot/choose-bot/index.html
@@ -9,9 +9,9 @@
 
   <body>
     <script src="/scripts/title.js"></script>
-    <noscript>Javascript must be enabled to properly display this page</noscript>
     <br>
     <pre>
+    <noscript><h3 style="text-align: center">Javascript must be enabled to properly display this page</h3></noscript>
 
     <h1 style="text-align: center;">Choose Which Bot To Add</h1>
 
