Looks better without colon

--- a/revnobot/terms-of-use/index.html
+++ b/revnobot/terms-of-use/index.html
@@ -13,7 +13,7 @@
         <br>
         <noscript><h3 style="text-align: center">Javascript must be enabled to properly display this page</h3></noscript>
         <div class="add-bot-style">
-            <h2 style="text-align: center;">Terms of Use:</h2>
+            <h2 style="text-align: center;">Terms of Use</h2>
             <ol>
               <li>Do not abuse or spam the bot. There is a cooldown to prevent that from happening but this is in place just in case the cooldown doesnt work.</li>
               <br>
