attempt to prefetch rickroll

--- a/added-bot/index.html
+++ b/added-bot/index.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" type="text/css" href="/css/main.css">
 <link rel = "icon" href="/media/images/default-black.png"/>
 <title>Thanks for adding bot</title>
+<link rel="prefetch" as="video" type="video/mp4" href='/media/videos/rickroll.mp4'>
 </head>
 <body>
     <script src="/scripts/title.js"></script>
