--- a/revnobot/choose-bot/index.html
+++ b/revnobot/choose-bot/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="icon" href="/media/images/default-black.png" />
     <title>Choose Bot</title>
+    <link rel="prefetch" as="video" type="video/mp4" href='/media/videos/rickroll.mp4'>
   </head>
 
   <body>
