--- a/404.html
+++ b/404.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="icon" href="/media/images/default-black.png" />
     <title>404 - file not found</title>
+    <link rel="prefetch" type="video/mp4" as="video" href='/media/videos/rickroll.mp4'>
   </head>
 
   <body>
