--- a/media/index.html
+++ b/media/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="prefetch" as="video" type="video/mp4" href='/media/videos/rickroll.mp4'>
     <meta http-equiv="refresh" content="0; url='/fun'" />
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="icon" href="/media/images/default-black.png" />
