--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="icon" href="/media/images/default-black.png" />
+    <link rel="me" href="https://mastodon.social/@Revnoplex">
     <title>Revnoplex</title>
     <link rel="prefetch" as="video" type="video/mp4" href='/media/videos/rickroll.mp4'>
   </head>
