--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
     
     <script>
     document.getElementById("bold").innerHTML = window.location.pathname;
-    if (window.location.pathname.startsWith("/404.html")) {
+    if (window.location.pathname.startsWith("/redirects")) {
       fullPath = window.location.pathname.split("/")
       subPath = fullPath.slice(3).join("/")
       redirect_page = fullPath.slice(1,3).join("/")
