added js-less support attempt #2 i forgor to add changes 😭

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -10,10 +10,10 @@
 
   <body>
     <script src="/scripts/title.js"></script>
+    <noscript><h2><img src="/media/images/default-black.png" alt="main logo" width="32" height="32" usemap="#workmap"> <a class="main-title-text" href="/">Revnoplex</a>     <a class="t-links" href="/site-menu">Website Menu</a></h2></noscript>
     <br>
     <pre>
-    <noscript><h3 style="text-align: center">Javascript must be enabled to properly display this page</h3></noscript>
-
+  
     <h1 style="text-align: center;">Download Center</h1>
 
     <a class="btn" href="/media/downloads/videos/gamecube.mp4" download>test download</a>
