--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 
   <body>
     <script src="/scripts/title.js"></script>
+    <noscript><h2><img src="/media/images/default-black.png" alt="main logo" width="32" height="32" usemap="#workmap"> <a class="main-title-text" href="/">Revnoplex</a>     <a class="t-links" href="/site-menu">Website Menu</a></h2></noscript>
     <br>
     <pre>
-    <noscript><h3 style="text-align: center">Javascript must be enabled to properly display this page</h3></noscript>
-
       <h1>Hey, I'm Revnoplex</h1>
-      <p>I write code and make youtube videos as a hobby</p>
+      <p>This page is under reconstruction...</p>
 
     </pre>
     <div class="featured-items", style="text-align: center;">
