--- a/fun/index.html
+++ b/fun/index.html
@@ -9,9 +9,9 @@
 
   <body>
     <script src="/scripts/title.js"></script>
+    <noscript><h2><img src="/media/images/default-black.png" alt="main logo" width="32" height="32" usemap="#workmap"> <a class="main-title-text" href="/">Revnoplex</a>     <a class="t-links" href="/site-menu">Website Menu</a></h2></noscript>
     <br>
     <pre>
-    <noscript><h3 style="text-align: center">Javascript must be enabled to properly display this page</h3></noscript>
     <h1 id="sus">Don't Click on Sussy Links</h1>
     <script>
       let mute = "";
