--- a/revnobot/choose-bot/index.html
+++ b/revnobot/choose-bot/index.html
@@ -10,11 +10,12 @@
 
   <body>
     <script src="/scripts/title.js"></script>
+    <noscript><h2><img src="/media/images/default-black.png" alt="main logo" width="32" height="32" usemap="#workmap"> <a class="main-title-text" href="/">Revnoplex</a>     <a class="t-links" href="/site-menu">Website Menu</a></h2></noscript>
     <br>
     <pre>
-    <noscript><h3 style="text-align: center">Javascript must be enabled to properly display this page</h3></noscript>
 
     <h1 style="text-align: center;">Choose Which Bot To Add</h1>
+    <p>This page is currently unused</p>
 
     <a class="btn" target="_blank" rel="noreferrer noopener" href="/redirects/revnobot/">Revnobot</a>
 
