--- a/revnobot/data-collection/index.html
+++ b/revnobot/data-collection/index.html
@@ -9,10 +9,10 @@
 
     <body>
         <script src="/scripts/title.js"></script>
+        <noscript><h2><img src="/media/images/default-black.png" alt="main logo" width="32" height="32" usemap="#workmap"> <a class="main-title-text" href="/">Revnoplex</a>     <a class="t-links" href="/site-menu">Website Menu</a></h2></noscript>
         <br>
         <br>
         <br>
-        <noscript><h3 style="text-align: center">Javascript must be enabled to properly display this page</h3></noscript>
         <div class="add-bot-style">
 
         <h1 style="text-align: center;">Data Collection Policy</h1>
