--- a/revnobot/index.html
+++ b/revnobot/index.html
@@ -4,16 +4,17 @@
   <head>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="icon" href="/media/images/default-black.png" />
+    <noscript><style> .disabledBtn { display: none } </style></noscript>
     <title>Discord Bot</title>
     <link rel="prefetch" as="video" type="video/mp4" href='/media/videos/rickroll.mp4'>
   </head>
 
   <body>
     <script src="/scripts/title.js"></script>
+    <noscript><h2><img src="/media/images/default-black.png" alt="main logo" width="32" height="32" usemap="#workmap"> <a class="main-title-text" href="/">Revnoplex</a>     <a class="t-links" href="/site-menu">Website Menu</a></h2></noscript>
     <br>
     <br>
     <br>
-    <noscript><h3 style="text-align: center">Javascript must be enabled to properly display this page</h3></noscript>
     <div class="add-bot-style">
 
     <h1 style="text-align: center;">Add Revnobot</h1>
@@ -26,6 +27,7 @@
     <input type="checkbox" id="terms" name="terms" value="accept"><label for="terms"> I accept both of the above</label><br>
     <div id="addBot">
         <p id="addBotLink" class="disabledBtn">Add Bot</p>
+        <noscript><p><a id="addBotLink" class="btn" href="/redirects/revnobot">Add Bot</a></p></noscript>
     </div>
     <script src="/revnobot/checker.js"></script>
     </div>
