Added bot logo to add bot page

--- a/revnobot/index.html
+++ b/revnobot/index.html
@@ -5,6 +5,24 @@
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="icon" href="/media/images/default-black.png" />
     <noscript><style> .disabledBtn { display: none } </style></noscript>
+    <style>
+      .title-items {
+        display: flex;
+      }
+      .title-item {
+        flex: 1; /* additionally, equal width */
+        display: inline-block;
+        padding: 1em;
+      }
+      .arrow-down {
+        border: solid white;
+        border-width: 0 5px 5px 0;
+        display: inline-block;
+        padding: 5px;
+        transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
+      }
+    </style>
     <title>Discord Bot</title>
     <link rel="prefetch" as="video" type="video/mp4" href='/media/videos/rickroll.mp4'>
   </head>
@@ -16,10 +34,11 @@
     <br>
     <br>
     <div class="add-bot-style">
-
-    <h1 style="text-align: center;">Add Revnobot</h1>
+      <h1 style="text-align: center; font-size: 100px;"><img class="" src="/media/images/revnobot-cropped.png" alt="revnobot logo" width="352" height="194">  Revnobot</h1>
+      <p><b>Add Bot Below</b><i style="padding: 5px"></i><i class="arrow-down"></i></p>
     <br>
-    <p>Revnobot is a multi-purpose utility, entertainment and music bot by Revnoplex</p>
+    <br>
+    <p style="font-size: 20px">Revnobot is a multi-purpose utility, entertainment and music bot by Revnoplex</p>
     <br>
     <h3>Please Read the following before adding to your server</h3>
     <p><a class="btn" href="/revnobot/data-collection/">Data Collection Policy</a>  <a class="btn" href="/revnobot/terms-of-use/">Terms of use</a></p>
