Added feature list to page

--- a/revnobot/index.html
+++ b/revnobot/index.html
@@ -6,6 +6,9 @@
     <link rel="icon" href="/media/images/default-black.png" />
     <noscript><style> .disabledBtn { display: none } </style></noscript>
     <style>
+      html {
+        scroll-behavior: smooth;
+      }
       .title-items {
         display: flex;
       }
@@ -35,11 +38,20 @@
     <br>
     <div class="add-bot-style">
       <h1 style="text-align: center; font-size: 100px;"><img class="" src="/media/images/revnobot-cropped.png" alt="revnobot logo" width="352" height="194">  Revnobot</h1>
-      <p><b>Add Bot Below</b><i style="padding: 5px"></i><i class="arrow-down"></i></p>
+      <p><a style="color: white; text-decoration: none;" href="#addBot"><b>Add Bot Below</b><i style="padding: 5px"></i><i class="arrow-down"></i></a></p>
     <br>
     <br>
     <p style="font-size: 20px">Revnobot is a multi-purpose utility, entertainment and music bot by Revnoplex</p>
     <br>
+    <h2>Features</h2>
+    <ul style="font-size: 20px">
+      <li>Fun Commands</li>
+      <li>VC Music Player</li>
+      <li>Moderation Featrues</li>
+      <li>Discord Information Utilities</li>
+      <li>Spicy Commands</li>
+      <li>Economy Commands</li>
+    </ul>
     <h3>Please Read the following before adding to your server</h3>
     <p><a class="btn" href="/revnobot/data-collection/">Data Collection Policy</a>  <a class="btn" href="/revnobot/terms-of-use/">Terms of use</a></p>
     <div class="centralise">
