Added list of data collected during server moderation

--- a/revnobot/data-collection/index.html
+++ b/revnobot/data-collection/index.html
@@ -16,9 +16,10 @@
         <div class="add-bot-style">
 
         <h1 style="text-align: center;">Data Collection Policy</h1>
-            <p>Revnobot will collect and store certain types of data for developer/debugging and for detecting potential misuse.</p>
-            <p>This data is only stored locally on the bot's host machine.</p>
-            <h3>The types of data collected include the following:</h3>
+            <p>Revnobot will collect and store certain types of data for developer/debugging purposes and for servers to moderate.</p>
+            <p>Developer/debugging data is only stored locally on the bot's host machine.</p>
+            <p>Server moderation data is stored in channels setup by the admin of a server (if setup by server admins). <br>See the moderation help menu in the Bot for more information on how to set this up</p>
+            <h3>The types of <b>Developer/Debugging</b> data collected include the following:</h3>
             <ul>
             <li>Server Names and IDs</li>
             <li>Server Owner Usernames and IDs</li>
@@ -31,6 +32,23 @@
                 <li>The names of the command passed to the bot</li>
                 <li>DMs sent to the bot</li>
             </ul>
+            </ul>
+            <h3>The types of <b>Server Moderation</b> data collected (if setup) include the following:</h3>
+            <ul>
+                <li>When members join or leave the server (username, etc.)</li>
+                <li>Messages (before and after) when a server member edits a message</li>
+                <li>Messages when a server member deletes a message</li>
+                <li>Messages when a user sends a message with a url flagged as malicious</li>
+                <li>Channels (names, channel topic, other channel settings) when a channel is created, edited or deleted)</li>
+                <li>Server Settings when changed</li>
+                <li>Server Emojis when added, edited, or removed</li>
+                <li>Server Roles when added or deteted</li>
+                <li>When members are banned (username, etc.)</li>
+                <li>Server Profiles (nickname, etc.) of members when changed</li>
+                <li>Server Roles members have when given or removed</li>
+                <li>When a member joins or leaves a voice channel (channel name, username, etc.)</li>
+                <li>Invites when a member creates or deletes an invite</li>
+                <li>Pinned message when a member pins or unpins a message</li>
             </ul>
             <p><b>Done Reading?</b></p>
             <p><a class="btn" href="/revnobot/">Back</a></p>
