Change title of revnobot page to "Revnobot"

--- a/revnobot/index.html
+++ b/revnobot/index.html
@@ -26,7 +26,7 @@
         -webkit-transform: rotate(45deg);
       }
     </style>
-    <title>Discord Bot</title>
+    <title>Revnobot</title>
     <link rel="prefetch" as="video" type="video/mp4" href='/media/videos/rickroll.mp4'>
   </head>
 
