Added webring and refactored footer script

--- a/404.html
+++ b/404.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="/media/images/default-black.png" />
     <title>404 - file not found</title>
     <link rel="prefetch" type="video/mp4" as="video" href='/media/videos/rickroll.mp4'>
+    <script src="/scripts/footer.js" defer></script>
   </head>
 
   <body>
@@ -25,7 +26,7 @@
     <script>
     document.getElementById("bold").innerHTML = window.location.pathname;
     </script>
-    <script src="/scripts/footer.js"></script>
+    <div id="foot"></div>
     </pre>
   </body>
 
