--- a/added-bot/index.html
+++ b/added-bot/index.html
@@ -5,6 +5,7 @@
 <link rel = "icon" href="/media/images/default-black.png"/>
 <title>Thanks for adding bot</title>
 <link rel="prefetch" as="video" type="video/mp4" href='/media/videos/rickroll.mp4'>
+<script src="/scripts/footer.js" defer></script>
 </head>
 <body>
     <script src="/scripts/title.js"></script>
@@ -18,6 +19,6 @@
 
     <a href="/" class="btn">Home</a>  <a href="/redirects/revnobot" class="btn">Add to another server</a>
      
-    <script src="/scripts/footer.js"></script>
+    <div id="foot"></div>
     </pre>
 </body>
