--- a/downloads/index.html
+++ b/downloads/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="/media/images/default-black.png" />
     <title>Download Center</title>
     <link rel="prefetch" as="video" type="video/mp4" href='/media/videos/rickroll.mp4'>
+    <script src="/scripts/footer.js" defer></script>
   </head>
 
   <body>
@@ -20,6 +21,6 @@
 
     <p>currently nothing else to download here that isn't something pirated</p>
     
-    <script src="/scripts/footer.js"></script>
+    <div id="foot"></div>
     </pre>
   </body>
