--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="me" href="https://mastodon.social/@Revnoplex">
     <title>Revnoplex</title>
     <link rel="prefetch" as="video" type="video/mp4" href='/media/videos/rickroll.mp4'>
+    <script src="/scripts/footer.js" defer></script>
   </head>
 
   <body>
@@ -28,7 +29,8 @@
         <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">I&#39;m going to stick to this platform for now. I wan&#39;t to see threads or another alternative actually become a preferred platform by many and then I might consider moving. And maybe wait for the outcome of the elon vs zuck match</p>&mdash; Revnoplex (@Revnoplex) <a href="https://twitter.com/Revnoplex/status/1677123062662303745?ref_src=twsrc%5Etfw">July 7, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>
     </div>
-      <script src="/scripts/footer.js"></script>
+    <p style="text-align: center;"><b><a href="https://w.sexnine.xyz/3/p" class="webringBtn">&#8249; Prev</a>    <a style="font-size: 25px; text-decoration: none;" href="/webringed-octopus">Webring</a>    <a href="https://w.sexnine.xyz/3/n" class="webringBtn">Next &#8250;</a></b></p>
+    <div id="foot"></div>
   </body>
 
 </html>
