--- a/revnobot/data-collection/index.html
+++ b/revnobot/data-collection/index.html
@@ -5,6 +5,7 @@
         <link rel="icon" href="/media/images/default-black.png" />
         <title>Data Collection Policy</title>
         <link rel="prefetch" as="video" type="video/mp4" href='/media/videos/rickroll.mp4'>
+        <script src="/scripts/footer.js" defer></script>
     </head>
 
     <body>
@@ -53,6 +54,6 @@
             <p><b>Done Reading?</b></p>
             <p><a class="btn" href="/revnobot/">Back</a></p>
         </div>
-        <script src="/scripts/footer.js"></script>
+        <div id="foot"></div>
     </body>
   
