--- a/site-menu/index.html
+++ b/site-menu/index.html
@@ -30,6 +30,7 @@
           padding: 1em;
         }
         </style>
+        <script src="/scripts/footer.js" defer></script>
   </head>
   <body>
     <script src="/scripts/title.js"></script>
@@ -47,6 +48,7 @@
           <p><a class="t-links" href="/fun">Funny</a></p>
           <p><a class="t-links" href="/revnobot"><img class="t-logos" src="/media/images/discord-logo.svg" alt="discord-logo"> Discord Bot</a></p>
           <p><a class="t-links" href="/site-menu">Website Menu</a></p>
+          <p><a class="t-links" href="/webring-octopus/">Webring</a></p>
         </div>
         <div class="menu-group">
           <h2>Social Media Links</h3>
@@ -58,7 +60,7 @@
           <a class="t-links" target="_blank" rel="noreferrer noopener me" href="https://mastodon.social/@Revnoplex"><img class="t-logos" src="/media/images/mastodon-logo.svg" alt="mastodon-logo"> Mastodon</a>
         </div>
     </div>
-    <script src="/scripts/footer.js"></script>
+    <div id="foot"></div>
   </body>
 
 </html>
