--- a/fun/index.html
+++ b/fun/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="icon" href="/media/images/default-black.png" />
     <title>Get Rickrolled</title>
+    <script src="/scripts/footer.js" defer></script>
   </head>
 
   <body>
@@ -34,7 +35,7 @@
       </video>
     </noscript>
     <p>You might have been lucky and only got rickrolled this time, but you might not be so the next time.<br>Don't click on links that look too good to be true</p>
-    <script src="/scripts/footer.js"></script>
+    <div id="foot"></div>
     </pre>
   </body>
 
