--- a/revnobot/choose-bot/index.html
+++ b/revnobot/choose-bot/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="/media/images/default-black.png" />
     <title>Choose Bot</title>
     <link rel="prefetch" as="video" type="video/mp4" href='/media/videos/rickroll.mp4'>
+    <script src="/scripts/footer.js" defer></script>
   </head>
 
   <body>
@@ -22,6 +23,6 @@
     <a class="btn" target="_blank" rel="noreferrer noopener" href="/redirects/revnobot2/">Revnobot 2</a>
 
     
-    <script src="/scripts/footer.js"></script>
+    <div id="foot"></div>
     </pre>
   </body>
