--- a/revnobot/index.html
+++ b/revnobot/index.html
@@ -28,6 +28,7 @@
     </style>
     <title>Revnobot</title>
     <link rel="prefetch" as="video" type="video/mp4" href='/media/videos/rickroll.mp4'>
+    <script src="/scripts/footer.js" defer></script>
   </head>
 
   <body>
@@ -63,5 +64,5 @@
     <script src="/revnobot/checker.js"></script>
     </div>
     
-    <script src="/scripts/footer.js"></script>
+    <div id="foot"></div>
   </body>
