Fix spelling mistake
Pointed out by @MCT32

--- a/revnobot/index.html
+++ b/revnobot/index.html
@@ -48,7 +48,7 @@
     <ul style="font-size: 20px">
       <li>Fun Commands</li>
       <li>VC Music Player</li>
-      <li>Moderation Featrues</li>
+      <li>Moderation Features</li>
       <li>Discord Information Utilities</li>
       <li>Spicy Commands</li>
       <li>Economy Commands</li>
