Add meta descriptors so link embeds on other sites

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Revnoplex</title>
     <link rel="prefetch" as="video" type="video/mp4" href='/media/videos/rickroll.mp4'>
     <script src="/scripts/footer.js" defer></script>
+    <meta property="og:title" content="Revnoplex" />
+    <meta property="og:description" content="Hey, I'm Revnoplex" />
+    <meta property="og:url" content="https://revnoplex.xyz" />
+    <meta property="og:image" content="https://revnoplex.xyz/media/images/default-black.png" />
+    <meta name="theme-color" content="#141414">
   </head>
 
   <body>
