Added twitter card

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Revnoplex</title>
     <link rel="prefetch" as="video" type="video/mp4" href='/media/videos/rickroll.mp4'>
     <script src="/scripts/footer.js" defer></script>
+    <meta name=”twitter:card” content=”summary”>
+    <meta name=”twitter:site” content=”@Revnoplex”>
+    <meta name=”twitter:creator” content=”@Revnoplex”>
     <meta property="og:title" content="Revnoplex" />
     <meta property="og:description" content="Hey, I'm Revnoplex" />
     <meta property="og:url" content="https://revnoplex.xyz" />
