Added og meta tags to other pages

--- a/404.html
+++ b/404.html
@@ -8,6 +8,14 @@
     <title>404 - file not found</title>
     <link rel="prefetch" type="video/mp4" as="video" href='/media/videos/rickroll.mp4'>
     <script src="/scripts/footer.js" defer></script>
+    <meta name=”twitter:card” content=”summary”>
+    <meta name=”twitter:site” content=”@Revnoplex”>
+    <meta name=”twitter:creator” content=”@Revnoplex”>
+    <meta property="og:title" content="404 Page" />
+    <meta property="og:description" content="404 page for revnoplex.xyz" />
+    <meta property="og:url" content="https://revnoplex.xyz/404.html" />
+    <meta property="og:image" content="https://revnoplex.xyz/media/images/default-black.png" />
+    <meta name="theme-color" content="#2b2d31">
   </head>
 
   <body>
