--- a/downloads/index.html
+++ b/downloads/index.html
@@ -7,6 +7,14 @@
     <title>Download Center</title>
     <link rel="prefetch" as="video" type="video/mp4" href='/media/videos/rickroll.mp4'>
     <script src="/scripts/footer.js" defer></script>
+    <meta name=”twitter:card” content=”summary”>
+    <meta name=”twitter:site” content=”@Revnoplex”>
+    <meta name=”twitter:creator” content=”@Revnoplex”>
+    <meta property="og:title" content="Download Center - Revnoplex" />
+    <meta property="og:description" content="Download center, but empty" />
+    <meta property="og:url" content="https://revnoplex.xyz/downloads" />
+    <meta property="og:image" content="https://revnoplex.xyz/media/images/default-black.png" />
+    <meta name="theme-color" content="#2b2d31">
   </head>
 
   <body>
