--- a/fun/index.html
+++ b/fun/index.html
@@ -6,6 +6,14 @@
     <link rel="icon" href="/media/images/default-black.png" />
     <title>Get Rickrolled</title>
     <script src="/scripts/footer.js" defer></script>
+    <meta name=”twitter:card” content=”summary”>
+    <meta name=”twitter:site” content=”@Revnoplex”>
+    <meta name=”twitter:creator” content=”@Revnoplex”>
+    <meta property="og:title" content="Click Here for Funny" />
+    <meta property="og:description" content="^^^^" />
+    <meta property="og:url" content="https://revnoplex.xyz/fun" />
+    <meta property="og:image" content="https://revnoplex.xyz/media/images/default-black.png" />
+    <meta name="theme-color" content="#2b2d31">
   </head>
 
   <body>
