--- a/site-menu/index.html
+++ b/site-menu/index.html
@@ -30,7 +30,15 @@
           padding: 1em;
         }
         </style>
-        <script src="/scripts/footer.js" defer></script>
+    <script src="/scripts/footer.js" defer></script>
+    <meta name=”twitter:card” content=”summary”>
+    <meta name=”twitter:site” content=”@Revnoplex”>
+    <meta name=”twitter:creator” content=”@Revnoplex”>
+    <meta property="og:title" content="Revnoplex - Website Menu" />
+    <meta property="og:description" content="List of links an pages on this website" />
+    <meta property="og:url" content="https://revnoplex.xyz/site-menu" />
+    <meta property="og:image" content="https://revnoplex.xyz/media/images/default-black.png" />
+    <meta name="theme-color" content="#2b2d31">  
   </head>
   <body>
     <script src="/scripts/title.js"></script>
