--- a/webringed-octopus/index.html
+++ b/webringed-octopus/index.html
@@ -8,6 +8,13 @@
     <title>Octopus Webring</title>
     <link rel="prefetch" as="video" type="video/mp4" href='/media/videos/rickroll.mp4'>
     <script src="/scripts/footer.js" defer></script>
+    <meta name=”twitter:card” content=”summary”>
+    <meta name=”twitter:site” content=”@Revnoplex”>
+    <meta name=”twitter:creator” content=”@Revnoplex”>
+    <meta property="og:title" content="Octopus Webring" />
+    <meta property="og:description" content="This website is part of the **Webringed Octopus** webring" />
+    <meta property="og:url" content="https://revnoplex.xyz/site-menu" />
+    <meta name="theme-color" content="#2b2d31">
   </head>
 
   <body class="flex flex-col justify-between min-h-screen">
