--- a/added-bot/index.html
+++ b/added-bot/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="stylesheet" type="text/css" href="/css/main.css">
-<link rel = "icon" href="/media/images/default-black.png"/>
-<title>Thanks for adding bot</title>
-<link rel="prefetch" as="video" type="video/mp4" href='/media/videos/rickroll.mp4'>
-<script src="/scripts/footer.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel = "icon" href="/media/images/default-black.png"/>
+    <title>Thanks for adding bot</title>
+    <link rel="prefetch" as="video" type="video/mp4" href='/media/videos/rickroll.mp4'>
+    <script src="/scripts/footer.js" defer></script>
+    <meta name=”twitter:card” content=”summary”>
+    <meta name=”twitter:site” content=”@Revnoplex”>
+    <meta name=”twitter:creator” content=”@Revnoplex”>
+    <meta property="og:title" content="Added Bot Page" />
+    <meta property="og:description" content="&quot;Added bot&quot; page for revnoplex.xyz" />
+    <meta property="og:url" content="https://revnoplex.xyz/added-bot" />
+    <meta property="og:image" content="https://revnoplex.xyz/media/images/default-black.png" />
+    <meta name="theme-color" content="#2b2d31">
 </head>
 <body>
     <script src="/scripts/title.js"></script>
