--- a/revnobot/index.html
+++ b/revnobot/index.html
@@ -29,6 +29,14 @@
     <title>Revnobot</title>
     <link rel="prefetch" as="video" type="video/mp4" href='/media/videos/rickroll.mp4'>
     <script src="/scripts/footer.js" defer></script>
+    <meta name=”twitter:card” content=”summary”>
+    <meta name=”twitter:site” content=”@Revnoplex”>
+    <meta name=”twitter:creator” content=”@Revnoplex”>
+    <meta property="og:title" content="Revnobot" />
+    <meta property="og:description" content="Revnobot is a multi-purpose utility, entertainment and music bot by Revnoplex" />
+    <meta property="og:url" content="https://revnoplex.xyz/revnobot" />
+    <meta property="og:image" content="https://revnoplex.xyz/media/images/revnobot-cropped.png" />
+    <meta name="theme-color" content="#2b2d31">
   </head>
 
   <body>
