added og meta tag to redirecting page as it doesn't appear

--- a/bot/index.html
+++ b/bot/index.html
@@ -5,4 +5,12 @@
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="icon" href="/media/images/default-black.png" />
     <title>Redirecting....</title>
+    <meta name=”twitter:card” content=”summary”>
+    <meta name=”twitter:site” content=”@Revnoplex”>
+    <meta name=”twitter:creator” content=”@Revnoplex”>
+    <meta property="og:title" content="Revnobot" />
+    <meta property="og:description" content="Revnobot is a multi-purpose utility, entertainment and music bot by Revnoplex" />
+    <meta property="og:url" content="https://revnoplex.xyz/revnobot" />
+    <meta property="og:image" content="https://revnoplex.xyz/media/images/revnobot-cropped.png" />
+    <meta name="theme-color" content="#2b2d31">
   </head>
