--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">I&#39;m going to stick to this platform for now. I wan&#39;t to see threads or another alternative actually become a preferred platform by many and then I might consider moving. And maybe wait for the outcome of the elon vs zuck match</p>&mdash; Revnoplex (@Revnoplex) <a href="https://twitter.com/Revnoplex/status/1677123062662303745?ref_src=twsrc%5Etfw">July 7, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>
     </div>
-    <p style="text-align: center;"><b><a href="https://w.sexnine.xyz/3/p" class="webringBtn">&#8249; Prev</a>    <a style="font-size: 25px; text-decoration: none;" href="/webringed-octopus">Webring</a>    <a href="https://w.sexnine.xyz/3/n" class="webringBtn">Next &#8250;</a></b></p>
+    <p style="text-align: center;"><b><a href="https://w.sexnine.xyz/3/p" class="webringBtn">&#8249; Prev</a>    <a style="font-size: 25px; text-decoration: none; color: white; padding: 10px 10px;" href="/webringed-octopus">Webring</a>    <a href="https://w.sexnine.xyz/3/n" class="webringBtn">Next &#8250;</a></b></p>
     <div id="foot"></div>
   </body>
 
