Fix broken link to webring page on site-menu page

--- a/site-menu/index.html
+++ b/site-menu/index.html
@@ -56,7 +56,7 @@
           <p><a class="t-links" href="/fun">Funny</a></p>
           <p><a class="t-links" href="/revnobot"><img class="t-logos" src="/media/images/discord-logo.svg" alt="discord-logo"> Discord Bot</a></p>
           <p><a class="t-links" href="/site-menu">Website Menu</a></p>
-          <p><a class="t-links" href="/webring-octopus/">Webring</a></p>
+          <p><a class="t-links" href="/webringed-octopus/">Webring</a></p>
         </div>
         <div class="menu-group">
           <h2>Social Media Links</h3>
