--- a/revnobot/index.html
+++ b/revnobot/index.html
@@ -66,9 +66,13 @@
     <div class="centralise">
     <input type="checkbox" id="terms" name="terms" value="accept"><label for="terms"> I accept both of the above</label><br>
     <div id="addBot">
-        <p id="addBotLink" class="disabledBtn">Add Bot</p>
-        <noscript><p><a id="addBotLink" class="btn" href="/redirects/revnobot">Add Bot</a></p></noscript>
+        <p id="addBotLink" class="disabledBtn">Add Bot To A Server</p>
+        <noscript><p><a id="addBotLink" class="btn" href="/redirects/revnobot">Add Bot To A Server</a></p></noscript>
     </div>
+    <div id="addBotUser">
+      <p id="addBotUserLink" class="disabledBtn">Use Bot Everywhere</p>
+      <noscript><p><a id="addBotUserLink" class="btn" href="/redirects/revnobot-user">Use Bot Everywhere</a></p></noscript>
+  </div>
     <script src="/revnobot/checker.js"></script>
     </div>
     
