Update bluesky handle

--- a/site-menu/index.html
+++ b/site-menu/index.html
@@ -67,7 +67,7 @@
           <a class="t-links" target="_blank" rel="noreferrer noopener" href="https://twitch.tv/Revnoplex"><img class="t-logos" src="/media/images/twitch-logo.svg" alt="twitch-logo"> Twitch</a>
           <a class="t-links" target="_blank" rel="noreferrer noopener" href="https://github.com/revnoplex"><img class="t-logos" src="/media/images/github-logo.svg" alt="github-logo"> Github</a>
           <a class="t-links" target="_blank" rel="noreferrer noopener me" href="https://mastodon.social/@Revnoplex"><img class="t-logos" src="/media/images/mastodon-logo.svg" alt="mastodon-logo"> Mastodon</a>
-          <a class="t-links" target="_blank" rel="noreferrer noopener" href="https://bsky.app/profile/revnoplex.bsky.social"><img class="t-logos" src="/media/images/bluesky-logo.svg" alt="bluesky-logo">Bluesky</a>
+          <a class="t-links" target="_blank" rel="noreferrer noopener" href="https://bsky.app/profile/revnoplex.xyz"><img class="t-logos" src="/media/images/bluesky-logo.svg" alt="bluesky-logo">Bluesky</a>
         </div>
     </div>
     <div id="foot"></div>
