--- a/projects/index.html
+++ b/projects/index.html
@@ -59,6 +59,9 @@
           <h2><a class="t-links" href="https://github.com/Revnoplex/vidtty">Vidtty</a></h2>
         </div>
     </div>
+
+    <p>Page inspired by <a href="https://sexnine.xyz/projects">sexnine.xyz/projects</a></p>
+    
     <div id="foot"></div>
   </body>
 
