Fix un-aligned text

--- a/projects/index.html
+++ b/projects/index.html
@@ -60,8 +60,8 @@
         </div>
     </div>
 
-    <p>Page inspired by <a href="https://sexnine.xyz/projects">sexnine.xyz/projects</a></p>
-    
+    <p style="text-align:center;">Page inspired by <a href="https://sexnine.xyz/projects">sexnine.xyz/projects</a></p>
+    <br>
     <div id="foot"></div>
   </body>
 
