fix copy-pasted title

--- a/projects/index.html
+++ b/projects/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="icon" href="/media/images/default-black.png" />
     <link rel="me" href="https://mastodon.social/@Revnoplex">
-    <title>Website Menu</title>
+    <title>Projects</title>
     <link rel="prefetch" as="video" type="video/mp4" href='/media/videos/rickroll.mp4'>
     <style> 
         .link-box{
