add user install link to added-bot page

--- a/added-bot/index.html
+++ b/added-bot/index.html
@@ -25,7 +25,7 @@
 
     <h3 style="text-align: center; color: #ffffff;">You can close this tab now. <br>Or browse the rest of the website</h3>
 
-    <a href="/" class="btn">Home</a>  <a href="/redirects/revnobot" class="btn">Add to another server</a>
+    <a href="/" class="btn">Home</a>  <a href="/redirects/revnobot" class="btn">Add to another server</a>  <a href="/redirects/revnobot-user/" class="btn">Add To Your Discord Account</a>
      
     <div id="foot"></div>
     </pre>
