--- a/revnobot/index.html
+++ b/revnobot/index.html
@@ -70,8 +70,8 @@
         <noscript><p><a id="addBotLink" class="btn" href="/redirects/revnobot">Add Bot To A Server</a></p></noscript>
     </div>
     <div id="addBotUser">
-      <p id="addBotUserLink" class="disabledBtn">Use Bot Everywhere</p>
-      <noscript><p><a id="addBotUserLink" class="btn" href="/redirects/revnobot-user">Use Bot Everywhere</a></p></noscript>
+      <p id="addBotUserLink" class="disabledBtn">Add Bot To Your Discord Account</p>
+      <noscript><p><a id="addBotUserLink" class="btn" href="/redirects/revnobot-user">Add Bot To Your Discord Account</a></p></noscript>
   </div>
     <script src="/revnobot/checker.js"></script>
     </div>
