fix user install link

--- a/redirects/revnobot-user/index.html
+++ b/redirects/revnobot-user/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='https://discord.com/oauth2/authorize?client_id=711582152940060859&response_type=code&redirect_uri=https%3A%2F%2Frevnoplex.xyz%2Fadded-bot&integration_type=1&scope=applications.commands+identify'" />
+    <meta http-equiv="refresh" content="0; url='https://discord.com/oauth2/authorize?client_id=711582152940060859&redirect_uri=https%3A%2F%2Frevnoplex.xyz%2Fadded-bot&integration_type=1&scope=applications.commands+identify'" />
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="icon" href="/media/images/default-black.png" />
     <title>Redirecting....</title>
