--- a/revnobot/index.html
+++ b/revnobot/index.html
@@ -71,7 +71,7 @@
     </div>
     <div id="addBotUser">
       <p id="addBotUserLink" class="disabledBtn">Add Bot To Your Discord Account</p>
-      <noscript><p><a id="addBotUserLink" class="btn" href="/redirects/revnobot-user">Add Bot To Your Discord Account</a></p></noscript>
+      <noscript><p><a id="addBotUserLink" class="btn" href="/redirects/revnobot-user" target="_blank" rel="noreferrer noopener">Add Bot To Your Discord Account</a></p></noscript>
   </div>
     <script src="/revnobot/checker.js"></script>
     </div>
