remove use of document.write

--- a/webringed-octopus/index.html
+++ b/webringed-octopus/index.html
@@ -8,6 +8,7 @@
     <title>Octopus Webring</title>
     <link rel="prefetch" as="video" type="video/mp4" href='/media/videos/rickroll.mp4'>
     <script src="/scripts/footer.js" defer></script>
+    <script src="/scripts/title.js" defer></script>
     <meta name=”twitter:card” content=”summary”>
     <meta name=”twitter:site” content=”@Revnoplex”>
     <meta name=”twitter:creator” content=”@Revnoplex”>
@@ -19,7 +20,7 @@
 
   <body class="flex flex-col justify-between min-h-screen">
     <div>
-    <script src="/scripts/title.js"></script>
+    <div id="title"></div>
     <noscript><h2><img src="/media/images/default-black.png" alt="main logo" width="32" height="32" usemap="#workmap"> <a class="main-title-text" href="/">Revnoplex</a>     <a class="t-links" href="/site-menu">Website Menu</a></h2></noscript>
     <br>
     <br>
