--- a/added-bot/index.html
+++ b/added-bot/index.html
@@ -6,6 +6,7 @@
     <title>Thanks for adding bot</title>
     <link rel="prefetch" as="video" type="video/mp4" href='/media/videos/rickroll.mp4'>
     <script src="/scripts/footer.js" defer></script>
+    <script src="/scripts/title.js" defer></script>
     <meta name=”twitter:card” content=”summary”>
     <meta name=”twitter:site” content=”@Revnoplex”>
     <meta name=”twitter:creator” content=”@Revnoplex”>
@@ -16,7 +17,7 @@
     <meta name="theme-color" content="#2b2d31">
 </head>
 <body>
-    <script src="/scripts/title.js"></script>
+    <div id="title"></div>
     <br>
     <pre>
         <noscript><h3 style="text-align: center">Javascript must be enabled to properly display this page</h3></noscript>
