--- a/projects/index.html
+++ b/projects/index.html
@@ -31,6 +31,7 @@
         }
         </style>
     <script src="/scripts/footer.js" defer></script>
+    <script src="/scripts/title.js" defer></script>
     <meta name=”twitter:card” content=”summary”>
     <meta name=”twitter:site” content=”@Revnoplex”>
     <meta name=”twitter:creator” content=”@Revnoplex”>
@@ -41,7 +42,7 @@
     <meta name="theme-color" content="#2b2d31">  
   </head>
   <body>
-    <script src="/scripts/title.js"></script>
+    <div id="title"></div>
     <noscript><h2><img src="/media/images/default-black.png" alt="main logo" width="32" height="32" usemap="#workmap"> <a class="main-title-text" href="/">Revnoplex</a>     <a class="t-links" href="/site-menu">Website Menu</a></h2></noscript>
     <br>
     <pre>
