--- a/revnobot/data-collection/index.html
+++ b/revnobot/data-collection/index.html
@@ -6,10 +6,11 @@
         <title>Data Collection Policy</title>
         <link rel="prefetch" as="video" type="video/mp4" href='/media/videos/rickroll.mp4'>
         <script src="/scripts/footer.js" defer></script>
+        <script src="/scripts/title.js" defer></script>
     </head>
 
     <body>
-        <script src="/scripts/title.js"></script>
+        <div id="title"></div>
         <noscript><h2><img src="/media/images/default-black.png" alt="main logo" width="32" height="32" usemap="#workmap"> <a class="main-title-text" href="/">Revnoplex</a>     <a class="t-links" href="/site-menu">Website Menu</a></h2></noscript>
         <br>
         <br>
