--- a/index.html
+++ b/index.html
@@ -25,10 +25,17 @@
     <br>
     <pre>
       <h1>Hey, I'm Revnoplex</h1>
-      <p>This page is under reconstruction...</p>
+      <p>This is my personal webpage</p>
 
+
+
+      <p> This page is being redone...</p>
+
+
+      
     </pre>
-    <div class="featured-items", style="text-align: center;">
+    
+    <!-- <div class="featured-items", style="text-align: center;">
       <div class="featured-item">
         <h1>Featued YouTube Video:</h1>
         <iframe width="852" height="480" src="https://www.youtube.com/embed/OSnveMc77ss" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -37,7 +44,7 @@
         <h1>Featured Tweet:</h1>
         <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">I&#39;m going to stick to this platform for now. I wan&#39;t to see threads or another alternative actually become a preferred platform by many and then I might consider moving. And maybe wait for the outcome of the elon vs zuck match</p>&mdash; Revnoplex (@Revnoplex) <a href="https://twitter.com/Revnoplex/status/1677123062662303745?ref_src=twsrc%5Etfw">July 7, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>
-    </div>
+    </div> -->
     <p style="text-align: center;"><b><a href="https://w.sexnine.xyz/3/p" class="webringBtn">&#8249; Prev</a>    <a style="font-size: 25px; text-decoration: none; color: white; padding: 10px 10px;" href="/webringed-octopus">Webring</a>    <a href="https://w.sexnine.xyz/3/n" class="webringBtn">Next &#8250;</a></b></p>
     <div id="foot"></div>
   </body>
